kafka and statistics service
