# social-media/src/schemas/users_schemas.py
@@ -1,6 +1,5 @@
-from uuid import UUID
 from pydantic import BaseModel
-from datetime import datetime
+from uuid import UUID
 
 
 class BaseUser(BaseModel):
@@ -25,29 +24,6 @@ class BaseUpdateData(BaseModel):
 class BaseAuthorizationData(BaseModel):
     login: str
     password: str
-
-
-class BaseNewPost(BaseModel):
-    title: str
-    content: str
-
-
-class BaseUpdatePost(BaseModel):
-    post_id: int
-    new_title: str
-    new_content: str
-
-
-class NewPostResponse(BaseModel):
-    post_id: int
-
-
-class PostItem(BaseModel):
-    id: int
-    user_id: int
-    title: str
-    time: datetime
-    content: str
 
 
 class SessionKey(BaseModel):
